resindvd: guard against not finding some data on a DVD

May possibly help with a particular DVD.

https://bugzilla.gnome.org/show_bug.cgi?id=673118